# web-game

./: .gitignore  CMakeLists.txt  code_gen.sh  code_gen.vcxproj  index.html  web-game.sln  web-game.vcxproj
src/: cmd.h  code_gen.cpp  ent_manager.h  entities.h  entity_manager.h  globals.h  main.cpp  msg.h  msg.meta.h  point_world.h  world.h
src/component/: movement.h  name.h  physics.h  pos.h  sprite.h
src/core/: array.h  bswap.h  common.h  hash.h  macro.h  map.h  quadtree.cpp  quadtree.h  string.h  thread.h  types.h
src/ent/: move.h  movement.h  name.h  physics.h  sprite.h
src/entity/: player.h
x64/Release/: web-game.exp  web-game.iobj  web-game.ipdb  web-game.lib
x64/Release/web-game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  web-game.lastbuildstate  web-game.write.1u.tlog
